# ticy

./: CMakeLists.txt  README.md  agent.cpp  board.cpp  board.h  game.cpp  game.h  gamelogic.cpp  gamelogic.h  humanplayer.h  login.h  main.cpp  player.h  startup.cpp  startup.h  startup.ui  testing_qt.pro  tst_everything.cpp  tst_try1.qml  tst_try2.qml  widget.cpp  widget.h
.github/workflows/: build-deploy.yml
testcases/: CMakeLists.txt  tst_testcases.cpp
testing_qt/: agent.h  deploy.sh  gamestate.cpp  gamestate.h  test_againt.cpp
testing_qt/tictactoe_qt/: README.md  agent.cpp  agent.h  board.cpp  board.h  game.cpp  game.h  gamehistory.c  gamehistory.h  gamelogic.h  gamestate.cpp  gamestate.h  humanplayer.cpp  humanplayer.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.ui  player.h  startup.cpp  startup.h  ttt.pro  ui_mainwindow.h  ui_widget.h  widget.cpp  widget.h  widget.ui
tests/: tst_try1.qml
